--- a/styles.css
+++ b/styles.css
@@ -92,14 +92,35 @@ div {
 	align-self: center;
     padding-left: 360px;
     font-size: 18px;
-    font-weight: bold
-	
+    font-weight: bold	
 }
+/* ----------------------------------------*/
 .signup {
-	background: yellow;
+	background: white;
 	height: 200px;
 	width: 850px;
+	display: flex;
+    justify-content: center;
+    align-items: center;
 }
+.signup .msg-box{
+	background-color: #3882F6;
+	width: 625px;
+	height: 80px;
+	display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.signup .msg-box .subheader {
+	color: #f9faf8;
+	font-size: 18px;
+	font-weight: bold;
+}
+.signup .msg-box .text {
+	color: #f9faf8;
+	font-size: 14px;
+}
+
 .footer {
 	background: purple;
 	height: 60px;
