--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,13 @@ div {
 }
 
 .footer {
-	background: purple;
-	height: 60px;
-	width: 850px;
+	background: #1f2937;
+    height: 60px;
+    width: 850px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    font-weight: lighter;
+    color: #f9faf8;
 }
